--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,17 @@
     ],
     "require": {
         "jms/serializer": "^1.8",
-        "doctrine/collections": "^1.4"
+        "doctrine/collections": "^1.4",
+        "doctrine/mongodb": "^1.5",
+        "doctrine/mongodb-odm": "^1.1",
+        "alcaeus/mongo-php-adapter": "^1.1"
     },
     "autoload": {
         "psr-4": {
           "Test\\": "src"
         }
+    },
+    "provide": {
+        "ext-mongo": "1.6.14"
     }
 }
